# Copyright (c) 2021-present Sparky Studios. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

project('plutonriver',
        'cpp',
        default_options : ['cpp_std=c++17'],
        version : '0.1.0',
        license : 'Apache2.0')


rive_src = [
    'rive-cpp/src/animation/animation_state.cpp',
    'rive-cpp/src/animation/animation_state_instance.cpp',
    'rive-cpp/src/animation/blend_animation.cpp',
    'rive-cpp/src/animation/blend_animation_1d.cpp',
    'rive-cpp/src/animation/blend_animation_direct.cpp',
    'rive-cpp/src/animation/blend_state.cpp',
    'rive-cpp/src/animation/blend_state_1d.cpp',
    'rive-cpp/src/animation/blend_state_1d_instance.cpp',
    'rive-cpp/src/animation/blend_state_direct.cpp',
    'rive-cpp/src/animation/blend_state_direct_instance.cpp',
    'rive-cpp/src/animation/blend_state_transition.cpp',
    'rive-cpp/src/animation/cubic_interpolator.cpp',
    'rive-cpp/src/animation/keyed_object.cpp',
    'rive-cpp/src/animation/keyed_property.cpp',
    'rive-cpp/src/animation/keyframe.cpp',
    'rive-cpp/src/animation/keyframe_bool.cpp',
    'rive-cpp/src/animation/keyframe_color.cpp',
    'rive-cpp/src/animation/keyframe_double.cpp',
    'rive-cpp/src/animation/keyframe_id.cpp',
    'rive-cpp/src/animation/layer_state.cpp',
    'rive-cpp/src/animation/linear_animation.cpp',
    'rive-cpp/src/animation/linear_animation_instance.cpp',
    'rive-cpp/src/animation/listener_action.cpp',
    'rive-cpp/src/animation/listener_align_target.cpp',
    'rive-cpp/src/animation/listener_bool_change.cpp',
    'rive-cpp/src/animation/listener_input_change.cpp',
    'rive-cpp/src/animation/listener_number_change.cpp',
    'rive-cpp/src/animation/listener_trigger_change.cpp',
    'rive-cpp/src/animation/nested_animation.cpp',
    'rive-cpp/src/animation/nested_linear_animation.cpp',
    'rive-cpp/src/animation/nested_remap_animation.cpp',
    'rive-cpp/src/animation/nested_simple_animation.cpp',
    'rive-cpp/src/animation/nested_state_machine.cpp',
    'rive-cpp/src/animation/state_instance.cpp',
    'rive-cpp/src/animation/state_machine.cpp',
    'rive-cpp/src/animation/state_machine_input.cpp',
    'rive-cpp/src/animation/state_machine_input_instance.cpp',
    'rive-cpp/src/animation/state_machine_instance.cpp',
    'rive-cpp/src/animation/state_machine_layer.cpp',
    'rive-cpp/src/animation/state_machine_listener.cpp',
    'rive-cpp/src/animation/state_transition.cpp',
    'rive-cpp/src/animation/system_state_instance.cpp',
    'rive-cpp/src/animation/transition_bool_condition.cpp',
    'rive-cpp/src/animation/transition_condition.cpp',
    'rive-cpp/src/animation/transition_number_condition.cpp',
    'rive-cpp/src/animation/transition_trigger_condition.cpp',
    'rive-cpp/src/artboard.cpp',
    'rive-cpp/src/assets/file_asset.cpp',
    'rive-cpp/src/assets/file_asset_contents.cpp',
    'rive-cpp/src/assets/image_asset.cpp',
    'rive-cpp/src/bones/bone.cpp',
    'rive-cpp/src/bones/root_bone.cpp',
    'rive-cpp/src/bones/skin.cpp',
    'rive-cpp/src/bones/skinnable.cpp',
    'rive-cpp/src/bones/tendon.cpp',
    'rive-cpp/src/bones/weight.cpp',
    'rive-cpp/src/component.cpp',
    'rive-cpp/src/constraints/constraint.cpp',
    'rive-cpp/src/constraints/distance_constraint.cpp',
    'rive-cpp/src/constraints/ik_constraint.cpp',
    'rive-cpp/src/constraints/rotation_constraint.cpp',
    'rive-cpp/src/constraints/scale_constraint.cpp',
    'rive-cpp/src/constraints/targeted_constraint.cpp',
    'rive-cpp/src/constraints/transform_constraint.cpp',
    'rive-cpp/src/constraints/translation_constraint.cpp',
    'rive-cpp/src/core/binary_reader.cpp',
    'rive-cpp/src/core/field_types/core_bool_type.cpp',
    'rive-cpp/src/core/field_types/core_bytes_type.cpp',
    'rive-cpp/src/core/field_types/core_color_type.cpp',
    'rive-cpp/src/core/field_types/core_double_type.cpp',
    'rive-cpp/src/core/field_types/core_string_type.cpp',
    'rive-cpp/src/core/field_types/core_uint_type.cpp',
    'rive-cpp/src/dependency_sorter.cpp',
    'rive-cpp/src/draw_rules.cpp',
    'rive-cpp/src/draw_target.cpp',
    'rive-cpp/src/drawable.cpp',
    'rive-cpp/src/file.cpp',
    'rive-cpp/src/generated/animation/animation_base.cpp',
    'rive-cpp/src/generated/animation/animation_state_base.cpp',
    'rive-cpp/src/generated/animation/any_state_base.cpp',
    'rive-cpp/src/generated/animation/blend_animation_1d_base.cpp',
    'rive-cpp/src/generated/animation/blend_animation_direct_base.cpp',
    'rive-cpp/src/generated/animation/blend_state_1d_base.cpp',
    'rive-cpp/src/generated/animation/blend_state_direct_base.cpp',
    'rive-cpp/src/generated/animation/blend_state_transition_base.cpp',
    'rive-cpp/src/generated/animation/cubic_interpolator_base.cpp',
    'rive-cpp/src/generated/animation/entry_state_base.cpp',
    'rive-cpp/src/generated/animation/exit_state_base.cpp',
    'rive-cpp/src/generated/animation/keyed_object_base.cpp',
    'rive-cpp/src/generated/animation/keyed_property_base.cpp',
    'rive-cpp/src/generated/animation/keyframe_bool_base.cpp',
    'rive-cpp/src/generated/animation/keyframe_color_base.cpp',
    'rive-cpp/src/generated/animation/keyframe_double_base.cpp',
    'rive-cpp/src/generated/animation/keyframe_id_base.cpp',
    'rive-cpp/src/generated/animation/linear_animation_base.cpp',
    'rive-cpp/src/generated/animation/listener_align_target_base.cpp',
    'rive-cpp/src/generated/animation/listener_bool_change_base.cpp',
    'rive-cpp/src/generated/animation/listener_number_change_base.cpp',
    'rive-cpp/src/generated/animation/listener_trigger_change_base.cpp',
    'rive-cpp/src/generated/animation/nested_bool_base.cpp',
    'rive-cpp/src/generated/animation/nested_number_base.cpp',
    'rive-cpp/src/generated/animation/nested_remap_animation_base.cpp',
    'rive-cpp/src/generated/animation/nested_simple_animation_base.cpp',
    'rive-cpp/src/generated/animation/nested_state_machine_base.cpp',
    'rive-cpp/src/generated/animation/nested_trigger_base.cpp',
    'rive-cpp/src/generated/animation/state_machine_base.cpp',
    'rive-cpp/src/generated/animation/state_machine_bool_base.cpp',
    'rive-cpp/src/generated/animation/state_machine_layer_base.cpp',
    'rive-cpp/src/generated/animation/state_machine_listener_base.cpp',
    'rive-cpp/src/generated/animation/state_machine_number_base.cpp',
    'rive-cpp/src/generated/animation/state_machine_trigger_base.cpp',
    'rive-cpp/src/generated/animation/state_transition_base.cpp',
    'rive-cpp/src/generated/animation/transition_bool_condition_base.cpp',
    'rive-cpp/src/generated/animation/transition_number_condition_base.cpp',
    'rive-cpp/src/generated/animation/transition_trigger_condition_base.cpp',
    'rive-cpp/src/generated/artboard_base.cpp',
    'rive-cpp/src/generated/assets/file_asset_contents_base.cpp',
    'rive-cpp/src/generated/assets/folder_base.cpp',
    'rive-cpp/src/generated/assets/image_asset_base.cpp',
    'rive-cpp/src/generated/backboard_base.cpp',
    'rive-cpp/src/generated/bones/bone_base.cpp',
    'rive-cpp/src/generated/bones/cubic_weight_base.cpp',
    'rive-cpp/src/generated/bones/root_bone_base.cpp',
    'rive-cpp/src/generated/bones/skin_base.cpp',
    'rive-cpp/src/generated/bones/tendon_base.cpp',
    'rive-cpp/src/generated/bones/weight_base.cpp',
    'rive-cpp/src/generated/constraints/distance_constraint_base.cpp',
    'rive-cpp/src/generated/constraints/ik_constraint_base.cpp',
    'rive-cpp/src/generated/constraints/rotation_constraint_base.cpp',
    'rive-cpp/src/generated/constraints/scale_constraint_base.cpp',
    'rive-cpp/src/generated/constraints/transform_constraint_base.cpp',
    'rive-cpp/src/generated/constraints/translation_constraint_base.cpp',
    'rive-cpp/src/generated/draw_rules_base.cpp',
    'rive-cpp/src/generated/draw_target_base.cpp',
    'rive-cpp/src/generated/nested_artboard_base.cpp',
    'rive-cpp/src/generated/node_base.cpp',
    'rive-cpp/src/generated/shapes/clipping_shape_base.cpp',
    'rive-cpp/src/generated/shapes/contour_mesh_vertex_base.cpp',
    'rive-cpp/src/generated/shapes/cubic_asymmetric_vertex_base.cpp',
    'rive-cpp/src/generated/shapes/cubic_detached_vertex_base.cpp',
    'rive-cpp/src/generated/shapes/cubic_mirrored_vertex_base.cpp',
    'rive-cpp/src/generated/shapes/ellipse_base.cpp',
    'rive-cpp/src/generated/shapes/image_base.cpp',
    'rive-cpp/src/generated/shapes/mesh_base.cpp',
    'rive-cpp/src/generated/shapes/mesh_vertex_base.cpp',
    'rive-cpp/src/generated/shapes/paint/fill_base.cpp',
    'rive-cpp/src/generated/shapes/paint/gradient_stop_base.cpp',
    'rive-cpp/src/generated/shapes/paint/linear_gradient_base.cpp',
    'rive-cpp/src/generated/shapes/paint/radial_gradient_base.cpp',
    'rive-cpp/src/generated/shapes/paint/solid_color_base.cpp',
    'rive-cpp/src/generated/shapes/paint/stroke_base.cpp',
    'rive-cpp/src/generated/shapes/paint/trim_path_base.cpp',
    'rive-cpp/src/generated/shapes/points_path_base.cpp',
    'rive-cpp/src/generated/shapes/polygon_base.cpp',
    'rive-cpp/src/generated/shapes/rectangle_base.cpp',
    'rive-cpp/src/generated/shapes/shape_base.cpp',
    'rive-cpp/src/generated/shapes/star_base.cpp',
    'rive-cpp/src/generated/shapes/straight_vertex_base.cpp',
    'rive-cpp/src/generated/shapes/triangle_base.cpp',
    'rive-cpp/src/hittest_command_path.cpp',
    'rive-cpp/src/importers/artboard_importer.cpp',
    'rive-cpp/src/importers/backboard_importer.cpp',
    'rive-cpp/src/importers/file_asset_importer.cpp',
    'rive-cpp/src/importers/keyed_object_importer.cpp',
    'rive-cpp/src/importers/keyed_property_importer.cpp',
    'rive-cpp/src/importers/layer_state_importer.cpp',
    'rive-cpp/src/importers/linear_animation_importer.cpp',
    'rive-cpp/src/importers/state_machine_importer.cpp',
    'rive-cpp/src/importers/state_machine_layer_importer.cpp',
    'rive-cpp/src/importers/state_machine_listener_importer.cpp',
    'rive-cpp/src/importers/state_transition_importer.cpp',
    'rive-cpp/src/layout.cpp',
    'rive-cpp/src/math/aabb.cpp',
    'rive-cpp/src/math/contour_measure.cpp',
    'rive-cpp/src/math/hit_test.cpp',
    'rive-cpp/src/math/mat2d.cpp',
    'rive-cpp/src/math/raw_path.cpp',
    'rive-cpp/src/math/raw_path_utils.cpp',
    'rive-cpp/src/math/vec2d.cpp',
    'rive-cpp/src/nested_artboard.cpp',
    'rive-cpp/src/node.cpp',
    'rive-cpp/src/renderer.cpp',
    'rive-cpp/src/rive_counter.cpp',
    'rive-cpp/src/scene.cpp',
    'rive-cpp/src/shapes/clipping_shape.cpp',
    'rive-cpp/src/shapes/cubic_asymmetric_vertex.cpp',
    'rive-cpp/src/shapes/cubic_detached_vertex.cpp',
    'rive-cpp/src/shapes/cubic_mirrored_vertex.cpp',
    'rive-cpp/src/shapes/cubic_vertex.cpp',
    'rive-cpp/src/shapes/ellipse.cpp',
    'rive-cpp/src/shapes/image.cpp',
    'rive-cpp/src/shapes/mesh.cpp',
    'rive-cpp/src/shapes/mesh_vertex.cpp',
    'rive-cpp/src/shapes/metrics_path.cpp',
    'rive-cpp/src/shapes/paint/color.cpp',
    'rive-cpp/src/shapes/paint/fill.cpp',
    'rive-cpp/src/shapes/paint/gradient_stop.cpp',
    'rive-cpp/src/shapes/paint/linear_gradient.cpp',
    'rive-cpp/src/shapes/paint/radial_gradient.cpp',
    'rive-cpp/src/shapes/paint/shape_paint.cpp',
    'rive-cpp/src/shapes/paint/shape_paint_mutator.cpp',
    'rive-cpp/src/shapes/paint/solid_color.cpp',
    'rive-cpp/src/shapes/paint/stroke.cpp',
    'rive-cpp/src/shapes/paint/trim_path.cpp',
    'rive-cpp/src/shapes/parametric_path.cpp',
    'rive-cpp/src/shapes/path.cpp',
    'rive-cpp/src/shapes/path_composer.cpp',
    'rive-cpp/src/shapes/path_vertex.cpp',
    'rive-cpp/src/shapes/points_path.cpp',
    'rive-cpp/src/shapes/polygon.cpp',
    'rive-cpp/src/shapes/rectangle.cpp',
    'rive-cpp/src/shapes/shape.cpp',
    'rive-cpp/src/shapes/shape_paint_container.cpp',
    'rive-cpp/src/shapes/star.cpp',
    'rive-cpp/src/shapes/straight_vertex.cpp',
    'rive-cpp/src/shapes/triangle.cpp',
    'rive-cpp/src/shapes/vertex.cpp',
    'rive-cpp/src/text/line_breaker.cpp',
    'rive-cpp/src/transform_component.cpp',
    'rive-cpp/src/world_transform_component.cpp'
]

rive_dep = declare_dependency(
    include_directories : include_directories('rive-cpp/include'),
    sources : rive_src,
)

headers = [include_directories('include'), include_directories('rive-cpp/include'), include_directories('src')]

subdir('include')
subdir('src')

subdir('tools/thumbnail_generator')
